--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -3,12 +3,12 @@
     <section id="portfolio-single" class="container main">    
         <div class="row">
             <div class="span6">
-                <img src="http://localhost/asrwebsite/images/portfolio/thumb/item1.jpg" width="100%">
+                <img src="http://localhost/asr%20new/asrwebsite/images/portfolio/thumb/palpal.jpg" width="100%">
             </div>
             <div class="span6 client-display">
                 <h2>Website</h2>
-                <p class="tag"><strong>Client:</strong> Example communication Pvt. Ltd.</p>
-                <p class="tag"><strong>Business type:</strong> E-commerce</p>
+                <p class="tag"><strong>Client:</strong>PAL&PAL Associates Pvt. Ltd.</p>
+                <p class="tag"><strong>Business type:</strong> Manufacture</p>
                 <p class="tag"><strong>Technologies:</strong> 
                     <ul>
                         <li>HTML</li>
@@ -17,12 +17,11 @@
                     </ul>
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    "PAL & PAL" is approved DIN EN ISO 9001 : 2008 COMPANY BY TUV NORD Germany,
+					distributing parts within india for heavy duty truck and bus viz. Mercedes, 
+					Man, Scania, volvo & also components of various trailers. we provide vast
+					range of parts covering suspension, engine, clutch, gear box, axle, bogie, differential, 
+					propellor, steering, brake, cabin, electrical & body. 
                 </p>
             </div>
         </div>
