--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -3,7 +3,7 @@
     <section id="portfolio-single" class="container main">    
         <div class="row">
             <div class="span6">
-                <img src="http://localhost/asr%20new/asrwebsite/images/portfolio/thumb/palpal.jpg" width="100%">
+                <img src="images/portfolio/thumb/palpal.jpg" width="100%">
             </div>
             <div class="span6 client-display">
                 <h2>Website</h2>
