changes in porfolio pages

--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -28,7 +28,7 @@
         <div style="height: 20px;"></div>
         <div class="row">
             <div class="span4 offset4">
-                <a href="#" class="btn btn-primary btn-block btn-large">View project</a>
+                <a href="http://palnpal.in" class="btn btn-primary btn-block btn-large">View project</a>
             </div>
         </div>
     </section>
