--- a/Vrudhi.html
+++ b/Vrudhi.html
@@ -27,7 +27,7 @@
         <div style="height: 20px;"></div>
         <div class="row">
             <div class="span4 offset4">
-                <a href="#" class="btn btn-primary btn-block btn-large">View project</a>
+                <a href="http://www.vrudhi.org/" class="btn btn-primary btn-block btn-large">View project</a>
             </div>
         </div>
     </section>
